# uquery-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  vercel.json
docs/docs/: configuration.md  intro.md  quick-start.md  response-formats.md
docs/docs/advanced-tutorials/: custom-database.md  kubernetes.md  query-files.md
docs/docs/advanced-tutorials/cloud-providers/: _category_.json  aws-serverless.md  gcp-serverless.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/static/: install.sh
src/: cli.rs  error.rs  main.rs
src/cli/: options.rs
src/core/: duckdb.rs  engine.rs  error.rs  mod.rs
src/web/: consumers.rs  mod.rs  proxy.rs  request.rs  response.rs  routers.rs
tests/: docker_smoke_test.sh  test.csv  test.db  test.jsonl  test.zstd.parquet
