[package]
name = "uquery"
version = "0.4.4"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
tokio = {version="1.41",features = ["full"] }
tokio-util = { version = "*",features = ["io","io-util"] }
serde = { version = "1.0", features = ["derive"] }
duckdb = { version = "1.3.0", features = ["extensions-full"] }
arrow = {version = "55", features = ["arrow-json","arrow-csv","arrow-ipc","chrono-tz"]}
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "*"
tower-http = { version = "*", features = ["compression-gzip","cors"]}
clap = { version = "4.5", features = ["derive","env"] }
async-trait = "0.1.88"
pingora = {version = "0.5.0", features=["proxy"]}

[dev-dependencies]
polars = { version = "0.48"}
polars-io = { version = "0.48",features = ["ipc_streaming","json"]}