[package]
name = "uquery"
version = "0.6.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
tokio = {version="1.47",features = ["full"] }
tokio-util = { version = "*",features = ["io","io-util"] }
serde = { version = "1.0", features = ["derive"] }
duckdb = { version = "=1.10501.0", features = ["extensions-full"] }
arrow = { version = "58", features = ["arrow-json","arrow-csv","arrow-ipc","chrono-tz"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip","cors"]}
clap = { version = "4.5", features = ["derive","env"] }
async-trait = "0.1.88"
pingora = {version = "0.8.0", features=["proxy"]}

[dev-dependencies]
polars = { version = "0.53"}
polars-io = { version = "0.53",features = ["ipc_streaming","json"]}